  * merged lp:~mmcg069/software-center/stars-visual-tweaks 
  * softwarecenter/db/database.py, test/test_appstore.py:
    - fix locking and add regression test, thanks to Matthew McGowan
      for the research into this
  * softwarecenter/db/reviews.py:
    - fix support for reviews in not enabled PPAs (like for-pay PPAs)
      LP: #731376

  [ Kiwinote ]
  * softwarecenter/backend/restfulclient.py:
    - import time on demand, this avoids an attribute error
  * softwarecenter/db/application.py:
    - avoid using unicode(None)
  * softwarecenter/view/softwarepane.py:
    - revert to correct sortmode once searchterm has been cleared
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Mar 2011 09:15:22 +0100

software-center (3.1.23.1) natty; urgency=low

  * softwarecenter/db/reviews.py:
    - fix crash when submitting new review

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 07 Mar 2011 20:40:10 +0100

software-center (3.1.23) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - fix broken downloadable icon code, improve error checking
    - update Unity launcher integration code per recent detailsview
      changes
  * softwarecenter/view/widgets/backforward.py:
    - remove the additional border space in the navigation bar
      (LP: #729053) 
  * softwarecenter/view/catview_gtk.py:
    - for subclasses of CategoriesViewGtk, connect events only after
      the UI has been fully created (LP: #721704, LP: #725642) 

  [ Aaron Peachey ]
    * softwarecenter/db/update.py:
      - fix missing log handler when run by update-software-center 
        (LP: #728896)
  
  [ Michael Vogt ]
  * merged lp:~mmcg069/software-center/small-catview-cleanup that
    fixes problems in the subcategies display
  * merged lp:~weblive-dev/software-center/software-center-use-module,
    many thanks to Stephane Graber. This will use the upstream weblive
    python module where possible
  * softwarecenter/db/application.py: