@@ -1,12 +1,0 @@
-[Protocol]
-exec=software-center %u
-protocol=apt
-input=none
-output=none
-helper=true
-listing=false
-reading=false
-writing=false
-makedir=false
-deleting=false
-Icon=application-x-deb
