@@ -1,9 +1,0 @@
-
-software-center
-	command=software-center
-	name=Install Package (software-center)
-	can_open_multiple_files=false
-	expects_uris=false
-	requires_terminal=false
-	mime_types=application/x-deb
-
