@@ -1,3 +1,0 @@
-pref("network.protocol-handler.app.apt","/usr/bin/software-center");
-pref("network.protocol-handler.external.apt",true);
-pref("network.protocol-handler.warn-external.apt",false);
