@@ -1,38 +1,0 @@
-<?xml version="1.0"?>
-<gconfschemafile>
-  <schemalist>
-    <schema>
-      <key>/schemas/desktop/gnome/url-handlers/apt/enabled</key>
-      <applyto>/desktop/gnome/url-handlers/apt/enabled</applyto>
-      <owner>software-center</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Whether the specified command should handle "apt" URLs</short>
-        <long>True if the command specified in the "command" key should handle "apt" URLs.</long>
-      </locale>
-    </schema>
-    <schema>
-      <key>/schemas/desktop/gnome/url-handlers/apt/command</key>
-      <applyto>/desktop/gnome/url-handlers/apt/command</applyto>
-      <owner>software-center</owner>
-      <type>string</type>
-      <default>software-center "%s"</default>
-      <locale name="C">
-        <short>The handler for "apt" URLs</short>
-        <long>The command used to handle "apt" URLs, if enabled.</long>
-      </locale>
-    </schema>
-    <schema>
-      <key>/schemas/desktop/gnome/url-handlers/apt/needs_terminal</key>
-      <applyto>/desktop/gnome/url-handlers/apt/needs_terminal</applyto>
-      <owner>software-center</owner>
-      <type>bool</type>
-      <default>false</default>
-      <locale name="C">
-        <short>Run the command in a terminal</short>
-        <long>True if the command used to handle this type of URL should be run in a terminal.</long>
-      </locale>
-    </schema>
-  </schemalist>
-</gconfschemafile>
