@@ -1,7 +1,0 @@
-<?xml version="1.0"?>
-<mime-info xmlns='http://www.freedesktop.org/standards/shared-mime-info'>
-	<mime-type type="application/x-deb">
-		<_comment>Software package</_comment>
-		<glob pattern="*.deb"/>
-	</mime-type>
-</mime-info>
