@@ -8,7 +8,6 @@ share:=usr/share/software-center
 # only ones using them.
 override_dh_auto_install:
 	dh_auto_install -- --install-lib /usr/share/software-center
-	dh_installmime -i
 	rm -r debian/software-center/usr/share/software-center/*.egg-info
 	# Move the scripts to $(SHARE) and relink them again later.
 	mv debian/software-center/usr/*bin/* debian/software-center/$(share)
