@@ -17,10 +17,7 @@ xml_files=[ ("share/app-install/desktop",
 	      "data/new.menu.in",
 	     )
 	    ),
-         ("share/mime/packages",
-          ("data/software-center.xml.in", )
-            ),
 	  ]
-schemas_files=[("share/gconf/schemas", ("data/software-center.schemas.in",))]
+schemas_files=[]
 #bug_contact="Michael Vogt <mvo@ubuntu.com>"
 
