@@ -105,12 +105,6 @@ setup(name="software-center", version=VERSION,
                    glob.glob("data/emblems/*.png")),
                   ('share/apt-xapian-index/plugins',
                    glob.glob("apt-xapian-index-plugin/*.py")),
-                  ('share/application-registry',
-                   ["data/software-center.applications"]),
-                  ('../etc/firefox/pref/',
-                   ["data/software-center.js"]),
-#                  ('share/kde4/services/',
-#                   ["data/apt.protocol"]),
                   ],
       cmdclass = {"build": build_extra.build_extra,
                   "build_i18n": build_i18n.build_i18n,
